// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`combining-characters.js 1`] = `
====================================options=====================================
parsers: ["flow", "babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const x = ["ÁÀĀÉÈĒẸE̩Ẹ́É̩Ẹ̀È̩Ẹ̄Ē̩ÍÌĪÓÒŌỌO̩Ọ́Ó̩Ọ̀Ò̩Ọ̄Ō̩ÚÙŪṢS̩áàāéèēẹe̩ẹ́é̩ẹ̀è̩ẹ̄ē̩íìīóòōọo̩ọ́ó̩ọ̀ò̩ọ̄ō̩úùū"];
//345678901234567890123456789012345678901234567890123456789012345678901234567890
//       1         2         3         4         5         6         7         8

=====================================output=====================================
const x = ["ÁÀĀÉÈĒẸE̩Ẹ́É̩Ẹ̀È̩Ẹ̄Ē̩ÍÌĪÓÒŌỌO̩Ọ́Ó̩Ọ̀Ò̩Ọ̄Ō̩ÚÙŪṢS̩áàāéèēẹe̩ẹ́é̩ẹ̀è̩ẹ̄ē̩íìīóòōọo̩ọ́ó̩ọ̀ò̩ọ̄ō̩úùū"];
//345678901234567890123456789012345678901234567890123456789012345678901234567890
//       1         2         3         4         5         6         7         8

================================================================================
`;

exports[`keys.js 1`] = `
====================================options=====================================
parsers: ["flow", "babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
({'この事はつもり素晴らしいことさ': '35jL9V'})

=====================================output=====================================
({ この事はつもり素晴らしいことさ: "35jL9V" });

================================================================================
`;

exports[`nbsp-jsx.js 1`] = `
====================================options=====================================
parsers: ["flow", "babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Note: there are non breaking spaces in the JSX text
x = <p> aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa </p>;

=====================================output=====================================
// Note: there are non breaking spaces in the JSX text
x = (
  <p>
     aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa 
  </p>
);

================================================================================
`;
